interface para la modificación de la información de usuarios terminada. enviado a revisión.

--- a/saitae-web/src/main/webapp/resources/components/autentia/representante.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/representante.xhtml
@@ -58,7 +58,7 @@
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:inputText>
 
-            <h:outputText value="Profesión u oficio: *" />
+            <h:outputText value="Forma de trabajo: *" />
             <p:inputText label="Profesión" value="#{cc.attrs.representante.estudiante.estudianteFormaTrabajo}" required="true">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:inputText>
