evaluación de maestros y grados terminada. Enviada a revisión

--- a/saitae-web/src/main/webapp/resources/components/autentia/evMaestro.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/evMaestro.xhtml
@@ -132,7 +132,7 @@
                     </p:inputTextarea>
                 </h:panelGrid>
             </p:tab>
-            <p:tab title="finalización">
+            <p:tab title="Finalización">
                 <h:panelGrid columns="2">
                     <p:outputLabel value="Resumen:" for="resumen" />
                     <p:inputTextarea rows="4" cols="30" id="resumen" value="#{cc.attrs.evMaestro.resumen}" 
