--- a/saitae-web/src/main/webapp/resources/components/autentia/tablasTipos.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/tablasTipos.xhtml
@@ -47,7 +47,7 @@
             </p:column>
         </p:dataTable>
         <p:commandButton value="+" styleClass="ui-priority-primary" 
-                         process="@this" update=":form0:msgs #{cc.attrs.NombreTabla}"
+                         process="@this" update=":form0:msgs form"
                          action="#{tipoController.onAddNew(cc.attrs.NombreTabla)}"
                          title="Agregar #{cc.attrs.textoAgregar}."/>
     </cc:implementation>
