--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla.xhtml
@@ -2,39 +2,49 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:o="http://omnifaces.org/ui">
 
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="default.css" library="css"/>
-        <h:outputStylesheet name="tableLayout.css" library="css"/>
-        <title>Facelets Template</title>
+        <title>#{sessionController.us.personaNombre.split(" ")[0]} 
+            #{sessionController.us.personaApellido.split(" ")[0]} - SAITAE/INTEX #{sessionController.año}</title>
+        <link rel="shortcut icon" href="../resources/img/intexM.jpeg"/>
+        <h:outputStylesheet library="css" name="cssLayout2.css"/>
+        <h:outputStylesheet library="css" name="default.css"/>
+        <h:outputStylesheet library="css" name="main.css"/>
+        <h:outputScript library="js" name="locales.js"/>
+        <f:event listener="#{sessionController.log()}" type="preRenderView"/>
     </h:head>
-
+    <!-- color: #ffffff"  ->style="background-color: #323232; color: white;"-->
     <h:body>
-        <table cellspacing="10px">
-            <tr>
-                <td id="top" colspan="3">
-                    <ui:insert name="top">Top</ui:insert>
-                </td>
-            </tr>
-            <tr>
-                <td id="left">
-                    <ui:insert name="left">Left</ui:insert>
-                </td>
-                <td id="content">
-                    <ui:insert name="content">Content</ui:insert>
-                </td>
-                <td id="right">
-                    <ui:insert name="right">Right</ui:insert>
-                </td>
-            </tr>
-            <tr>
-                <td id="bottom" colspan="3">
-                    <ui:insert name="bottom">Bottom</ui:insert>
-                </td>
-            </tr>
-        </table>
+        <div id="top">
+            <ui:insert name="top">
+                <h:form id="form0">
+                    <p:growl id="msgs" showDetail="true" life="10000"/>
+                    <p:menubar id="menubar" model="#{sessionController.mm}"/>
+                </h:form>
+            </ui:insert>
+        </div>
+        <div id="right">
+            <ui:insert name="right">
+                <o:socket channel="notificacion" onmessage="function socketListener(message) {
+                          notificar([{name: 'mss', value: message}]);}"/>
+                <h:form id="noti">
+                    <p:remoteCommand name="notificar" actionListener="#{sessionController.escucha()}"/>
+                </h:form>
+            </ui:insert>
+        </div>
+        <div id="content" class="content">
+            <ui:insert name="content">
+                Sin Contenido
+            </ui:insert>
+        </div>
+        <div id="bottom">
+            <ui:insert name="bottom">
+            </ui:insert>
+        </div>
     </h:body>
 
 </html>
