Corrección de errores mínimos

--- a/saitae-web/src/main/webapp/resources/components/autentia/persona1.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona1.xhtml
@@ -15,11 +15,18 @@
     <cc:implementation>
         <h:panelGrid columns="3">
             <p:outputLabel for="direcion" value="Dirección: "/>
-            <p:inputText id="direcion" value="#{cc.attrs.persona.personaDireccion}" required="true" title="Ingrese la dirección de residencia de la persona"/>
+            <p:inputText id="direcion" value="#{cc.attrs.persona.personaDireccion}" 
+                         required="true" title="Ingrese la dirección de residencia de la persona">
+                <p:ajax event="change" listener="#{loginController.onBlour}"/>
+            </p:inputText>
             <p:message for="direcion" showSummary="true" />
 
             <p:outputLabel for="telefono" value="Teléfono Personal: "/>
-            <p:inputMask id="telefono" value="#{cc.attrs.persona.personaTelefono}" required="true" mask="9999-9999" title="Ingrese el número de reléfono personal de la persona"/>
+            <p:inputMask id="telefono" value="#{cc.attrs.persona.personaTelefono}" 
+                         required="true" mask="9999-9999" 
+                         title="Ingrese el número de reléfono personal de la persona">
+                <p:ajax event="change" listener="#{loginController.onBlour}"/>
+            </p:inputMask>
             <p:message for="telefono" showSummary="true" />
 
             <p:outputLabel for="telefono1" value="Teléfono de Residencia: " 
@@ -27,12 +34,16 @@
             <p:inputMask id="telefono1" value="#{cc.attrs.maestro.maestrocolTelefonoResidencia}" 
                          required="true" mask="9999-9999" 
                          rendered="#{cc.attrs.persona.tipoPersona.idtipoPersona==4}"
-                         title="Ingrese el número de reléfono de la residencia de la persona"/>
+                         title="Ingrese el número de reléfono de la residencia de la persona">
+                <p:ajax event="change" listener="#{loginController.onBlour}"/>
+            </p:inputMask>
             <p:message for="telefono1" showSummary="true" 
                        rendered="#{cc.attrs.persona.tipoPersona.idtipoPersona==4}"/>
 
             <p:outputLabel for="email" value="Correo electrónico: "/>
-            <p:inputText id="email" value="#{cc.attrs.persona.personaEmail}" type="email"/>
+            <p:inputText id="email" value="#{cc.attrs.persona.personaEmail}" type="email">
+                <p:ajax event="change" listener="#{loginController.onBlour}"/>
+            </p:inputText>
             <p:column/>
         </h:panelGrid>
     </cc:implementation>
