--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -18,7 +18,7 @@
         <f:event listener="#{sessionController.log()}" type="preRenderView"/>
     </h:head>
     <!-- color: #ffffff"  ->style="background-color: #323232; color: white;"-->
-    <h:body>
+    <h:body style="#{themeControlller.estilo}">
         <div id="top">
             <ui:insert name="top">
                 <h:form id="form0">
