Modificaciones hechas a raíz de la primera ronda de pruebas.

--- a/saitae-web/src/main/webapp/resources/components/autentia/evMaestro.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/evMaestro.xhtml
@@ -110,7 +110,7 @@
                     </p:selectBooleanButton>
 
                     <p:outputLabel for="fi2" value="Jornalización del grado: "/>
-                    <p:selectBooleanButton id="fi2" value="#{cc.attrs.evMaestro.jornalización}"
+                    <p:selectBooleanButton id="fi2" value="#{cc.attrs.evMaestro.jornalizacion}"
                                            offLabel="No" onLabel="Sí" disabled="#{!cc.attrs.editar}">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:selectBooleanButton>
